<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/main_title"/>

    <Button
        android:id="@+id/buttonBasicRules"
        android:text="@string/basic_rules"
        style="@style/MainActivityButtonsStyle"/>

    <Button
        android:id="@+id/buttonLore"
        android:text="@string/lore"
        style="@style/MainActivityButtonsStyle"/>

    <Button
        android:id="@+id/buttonAbout"
        android:text="@string/about"
        style="@style/MainActivityButtonsStyle"/>

</LinearLayout>